--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Mi Portafolio</title>
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="">
 </head>
 <body>
-      <h1> bienveido a mi portafolio</h1>
+      <h1> Bienveido a mi portafolio</h1>
       <h2>Miguel Ángel Ortiz-multimedia 2500096</h2>
       <h3>contactame!. telefono 313 349 1555</h3>
 </body>
