--- a/fuente1.html
+++ b/fuente1.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/fuentes1.css">
 </head>
 <body>
-    <h1>fuente 1</h1>
-    <h2>Esta es mi fuente cinzel</h2>
+   <div>
+     <label>Game<br>Of thrones</label>
+   </div>
 </body>
 </html>
