--- a/fuentes2.html
+++ b/fuentes2.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/fuentes (2).css">
 </head>
 <body>
-    <h1>fuente 2</h1>
-    <h2>Esta es mi fuente neue</h2>
+    <div>
+        <label>NETFLIX</label>
+      </div>
 </body>
 </html>
