--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <link rel="stylesheet" href="">
 </head>
 <body>
-      <h1> Bienveido a mi portafolio</h1>
+      <h1> Bienvenido a mi portafolio</h1>
       <h2>Miguel Ángel Ortiz-multimedia 2500096</h2>
       <h3>contactame!. telefono 313 349 1555</h3>
 
