--- a/fuentes3.html
+++ b/fuentes3.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/fuentes3.css">
 </head>
 <body>
-    <h1>Esta es mi fuente 3</h1>
-    <h2>Esta es mi fuente waltograph</h2>
+    <div>
+        <label>Disney</label>
+      </div>
 </body>
 </html>
