--- a/colores.html
+++ b/colores.html
@@ -18,13 +18,15 @@
     </div>
     <h2>colores llamados por su código RGB</h2>
     <div class="box-direction">
-         <div class="box-style box-64-64-64"></div>
-        <div class="box-style box-171-238-7"></div>
+         <div class="box-style box-64-64-64">color:<br>box-64-64-64</div>
+        <div class="box-style box-171-238-7">color:<br>box-171-238-7</div>
+        <div class="box-style box-255-195-0">color:<br>box-255-195-0</div>
 </div>
     <h2>colores llamados por su código hexadecimal</h2>
     <div class="box-direction">
-         <div class="box-style box-14FAC3"></div>
-         <div class="box-style box-F5370F"></div>
+         <div class="box-style box-14FAC3">color:<br>box-#14FAC3</div>
+         <div class="box-style box-F5370F">color:<br>box-#F5370F</div>
+         <div class="box-style box-FFD700">color:<br>box-#FFD700</div>
 </div>
 </body>
 </html>
