--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
             <li><a href="fuente.html"> Fuentes</li>
             <li><a href="listas.html"> listas</li>
                   <ul>
-                        <li><a href="fuente1.html" >Fuente 1</li>
-                        <li><a href="fuentes2.html">Fuente 2</li>    
-                        <li><a href="fuentes3.html">Fuente 3</li>     
+                        <li><a href="fuente1.html" >Fuente Game of thrones</li>
+                        <li><a href="fuentes2.html">Fuente NETFLIX</li>    
+                        <li><a href="fuentes3.html">Fuente Disney</li>
+                        <li><a href="colores.html">colores</li>              
                   </ul>
       </ul>
 
