--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                         <li><a href="fuente1.html" >Fuente Game of thrones</li>
                         <li><a href="fuentes2.html">Fuente NETFLIX</li>    
                         <li><a href="fuentes3.html">Fuente Disney</li>
-                        <li><a href="colores.html">colores</li>              
+                        <li><a href="colores.html">Colores</li>
+                        <li><a href="catalogo.html">Catalogo</li>                
                   </ul>
       </ul>
 
