--- a/catalogo.html
+++ b/catalogo.html
@@ -8,23 +8,35 @@
     <link rel="stylesheet" href="css/catalogo.css">
 </head>
 <body>
-    <div class="main-box">
-    <div class="box-style box-1">
-       <div class="add-cart-1">
+  <div class="main-box">
+        <!-- caja de imagenes-->
+      <div class="box-style box-1">
+           <!-- caja de imagenes-->
+          <div class="product-box">
+            <img src="img/reloj 250x250.png" alt="Reloj Mujer">
+          </div>
+          <div class="product-text">
+            <span class="product-text-span">Reloj Rolex</span><br>
+            <span class="text-descripcion">producido con los mas altos <br> estánderes a nivel mundial</span>
+            <span class="price-text">$800</span>
+          </div>
+
+         <!--caja de colores para añadir al carrito-->
+         <div class="add-cart-1">
          <span class="add-cart-1-span">ADD TO CART</span>
-        </div>
-    </div>
-     <div class="main-box">
-    <div class="box-style box-2">
+         </div>
+ </div>
+     <!-- <div class="main-box">
+     <div class="box-style box-2">
         <div class="add-cart-2">
         <span class="add-cart-2-span">ADD TO CART</span>
         </div>
-</div>
+ </div>
     <div class="main-box">
      <div class="box-style box-3">
         <div class="add-cart-3">
         <span class="add-cart-3-span">ADD TO CART</span>
-         </div>
-</div>
+  </div> -->
+ </div>
 </body>
 </html>
