--- a/catalogo.html
+++ b/catalogo.html
@@ -4,55 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Margenes</title>
+    <title>margenes</title>
     <link rel="stylesheet" href="css/catalogo.css">
     <link rel="stylesheet" href="icons/all.css">
+
 </head>
 <body>
-  <i class="fa-solid fa-house"></i>
-  <div class="main-box">
-      <div class="box-style box-1">
-          <div class="product-box">
-            <img src="img/reloj 250x250.png" alt="Reloj Mujer">
-          </div>
-          <div class="product-text">
-            <span class="product-text-span">Reloj Rolex</span><br>
-            <span class="text-descripcion">producido con los mas altos <br> estánderes a nivel mundial</span>
-            <span class="price-text">$800</span>
-            <i class="star-style fa-solid fa-star fa-bounce"></i>
-            <i class="star-style fa-solid fa-star fa-bounce"></i>
-            <i class="star-style fa-regular fa-star fa-fade"></i>
-          </div>
-         <div class="add-cart-1">
-         <span class="add-cart-1-span">ADD TO CART</span>
-         </div>
+    <div class="main-box">
 
-         <div class="main-box">
-          <div class="box-style box-2">
-            <div class="product-box">
-              <img src="img/camiseta 250x250.png" alt="Camiseta Gucci">
-              <span class="price-text">$1000</span>
-              <i class="star-style fa-solid fa-star fa-bounce"></i>
-              <i class="star-style fa-solid fa-star fa-bounce"></i>
-              <i class="star-style fa-regular fa-star fa-fade"></i>
-            </div>
-             <div class="add-cart-2">
-             <span class="add-cart-2-span">ADD TO CART</span>
-             </div>
-      </div>
-         <div class="main-box">
-          <div class="box-style box-3">
-            <div class="product-box">
-              <img src="img/zapatillas 250x250.png" alt="Zapatillas Nike">
-              <span class="price-text">$1200</span>
-              <i class="star-style fa-solid fa-star fa-bounce"></i>
-              <i class="star-style fa-solid fa-star fa-bounce"></i>
-              <i class="star-style fa-regular fa-star fa-fade"></i>
-            </div>
-             <div class="add-cart-3">
-             <span class="add-cart-3-span">ADD TO CART</span>
-       </div> 
- </div>
- </div>
+<!--caja del producto -->
+    <div class="box-style box-1">
+        <div class="product-box">
+           <img src="img/saco250x250_.jpg" alt="saco">
+        </div>
+        <div class="product-text">
+            <span class="product-text-span">Saco Gucci</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-text">$900</span>
+            <i class="star-style1 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style1 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style1 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style1 fa-regular fa-star"></i>
+        </div>
+        <div class="add-cart-1">
+            <span class="add-cart-1-span">ADD TO CART</span>
+        </div>
+    </div>
+    <div class="box-style box-2">
+        <div class="product-box">
+            <img src="img/reloj_inteligente.jpg" alt="reloj Inteligente">
+        </div>
+        <div class="product-text">
+            <span class="product-text-span">Reloj inteligente</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-text2">$800</span>
+            <i class="star-style2 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style2 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style2 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style2 fa-regular fa-star"></i>
+        </div>
+    <div class="add-cart-2">
+        <span class="add-cart-2-span">ADD TO CART</span>
+     </div>
+    </div>
+    <div class="box-style box-3">
+        <div class="product-box">
+            <img src="img/airpods250x250_1.jpg" alt="Airpods">
+        </div>
+        <div class="product-text">
+            <span class="product-text-span">Airpods</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-text3">$300</span>
+            <i class="star-style3 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style3 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style3 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style3 fa-regular fa-star"></i>
+        </div>
+        <div class="add-cart-3">
+            <span class="add-cart-3-span">ADD TO CART</span>
+         </div>
+    </div>
 </body>
 </html>
