--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                         <li><a href="fuentes2.html">Fuente NETFLIX</li>    
                         <li><a href="fuentes3.html">Fuente Disney</li>
                         <li><a href="colores.html">Colores</li>
-                        <li><a href="catalogo.html">Catalogo</li>                
+                        <li><a href="catalogo.html">Catalogo</li>
+                        <li><a href="tablas.html">Tabla</li>
+
                   </ul>
       </ul>
       <i class="fa-solid fa-house"></i>
