--- a/tablas.html
+++ b/tablas.html
@@ -31,7 +31,7 @@
              <td class="th-2"colspan="3"><i class="check-style  fa-solid fa-check"></i></td>
          </tr>
            <tr>
-            <th class="th-HBO" rowspan="3">HBO</th>
+            <th class="th-HBO4" rowspan="3">HBO</th>
             <td class="class">HBO family</td>
             <td class="th-2"><i class="error-style fa-solid fa-xmark"></i></td>
             <td class="th-2"colspan="3"><i class="check-style  fa-solid fa-check"></i></td>  
@@ -48,7 +48,7 @@
             <td class="th-2">NO</i></td>
             <td class="th-2">NO</i></td>
             <td class="th-3">SI</i></td> 
-            <td class="th-3">SI</i></td> 
+            <td class="th-33">SI</i></td> 
          </tr>
          
       </table>
