--- a/menu-horizontal.html
+++ b/menu-horizontal.html
@@ -20,7 +20,7 @@
             <li class="despegar"><i class="fa-solid fa-ticket"></i><br> Actividades</li>
             <li class="despegar"><i class="fa-solid fa-star"></i><br> Escapadas</li>
             <li class="despegar"><i class="fa-solid fa-car-side"></i><br> Carros</li>
-            <li class="despegar"><i class="fa-solid fa-clipboard-question"></i></i><br> Asistencias</li>
+            <li class="despegar"><i class="fa-solid fa-clipboard-question"></i><br> Asistencias</li>
             <li class="despegar"><i class="fa-solid fa-truck-fast"></i></i><br> Traslados</li>
 
          </ul>
