--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <li><a href="colores.html">Colores</li>
                         <li><a href="catalogo.html">Catalogo</li>
                         <li><a href="tablas.html">Tabla</li>
+                        <li><a href="menu-horizontal.html">Menú</li>
 
                   </ul>
       </ul>
