--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                         <li><a href="colores.html">Colores</li>
                         <li><a href="catalogo.html">Catalogo</li>
                         <li><a href="tablas.html">Tabla</li>
-                        <li><a href="menu-horizontal.html">Menú</li>
+                        <li><a href="menu-horizontal.html">Menu</li>
+                        
 
                   </ul>
       </ul>
