--- a/media-query.html
+++ b/media-query.html
@@ -4,25 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restaurante el sabor de casero</title>
+    <title>Restaurante El Sabor De Casa</title>
     <link rel="stylesheet" href="css/media-query.css">
-  
 </head>
-       <nav class="main-nav">
-        <span id="menuBar" class="menu-bar">&#9776</span>
-            <ul class="main-menu-block">
-                <li class="iten-style"><a href="#">Menú</a></li>
-                <li class="iten-style"><a href="#">contáctenos</a></li>
-                <li class="iten-style"><a href="#">Horarios de atención</a></li>
-                <li class="iten-style"><a href="#">Ubicación</a></li>
-                <li class="iten-style"><a href="#">Servicios adicionales</a></li>
-                <li class="iten-style"><a href="#">Domicilios</a></li>
-                <li class="iten-style"><a href="#">Reservaciones</a></li>
-               
-            </ul>
-       </nav> 
-        <script src="js/media-query.js"></script>
 <body>
-    
+    <nav class="main-nav">
+        <span id="menuBar"class="menu-bar">&#9776</span>
+        <ul class="main-menu">
+        <li class="item-style"><a href="">Menú</a></li>
+        <li class="item-style"><a href="">Contáctenos</a></li>
+        <li class="item-style"><a href="">Horarios de Atención</a></li>
+        <li class="item-style"><a href="">Ubicación</a></li>
+        <li class="item-style"><a href="">Servicios Adicionales</a></li>
+        <li class="item-style"><a href="">Domiclios</a></li>
+        <li class="item-style"><a href="">Reservaciones</a></li>
+        </ul>
+    </nav>
+    <script src="js/media-query.js"></script>
 </body>
 </html>
