--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <li><a href="catalogo.html">Catalogo</li>
                         <li><a href="tablas.html">Tabla</li>
                         <li><a href="menu-horizontal.html">Menu</li>
+                        <li><a href="media-query.html">Media Query</li>
                         
 
                   </ul>
