--- a/media-query.html
+++ b/media-query.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
-    <nav class="main-nav">
+    <nav id="mainNAV" class="main-nav">
         <span id="menuBar"class="menu-bar">&#9776</span>
-        <ul class="main-menu">
+        <ul id="mainMenu" class="main-menu">
         <li class="item-style"><a href="">Menú</a></li>
         <li class="item-style"><a href="">Contáctenos</a></li>
         <li class="item-style"><a href="">Horarios de Atención</a></li>
@@ -19,6 +19,7 @@
         <li class="item-style"><a href="">Domiclios</a></li>
         <li class="item-style"><a href="">Reservaciones</a></li>
         </ul>
+        
     </nav>
     <script src="js/media-query.js"></script>
 </body>
