--- a/transition.html
+++ b/transition.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="box-direction">
-        <div class="box-style box-darkyan">Posicionamiento<br>Static</div>
+        <div class="box-style box-palevioletred">Posicionamiento<br>Static</div>
     v
 </body>
 </html>
