--- a/menu-subitems.html
+++ b/menu-subitems.html
@@ -27,8 +27,25 @@
                     <li><a href="#">Cauca</a></li> 
            </ul>
             </li>
-                  <li><a href="#">Productos</a></li> 
-                  <li><a href="#">Contactenos</a></li>
+                  <li><a href="#">Servicios</a>
+                    <ul>
+                      <li><a href="#">Fotografias</a></li>
+                      <li><a href="#">Spot</a></li>
+                      <li><a href="#">Marketing</a></li>
+                      <li><a href="#">Videos</a>
+                        <ul>
+                          <li><a href="#">Video comercial</a></li>
+                          <li><a href="#">Entrevistas</a></li>
+                          <li><a href="#">Motion Graphics</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li> 
+                  <li><a href="#">Contactenos</a>
+                  <ul>
+                    <li><a href="#">3133491555</a></li>
+                   </ul>
+                </li>
                   <li><a href="#">Galeria</a></li>
         </ul>  
   </nav>
