--- a/menu-subitems-2.html
+++ b/menu-subitems-2.html
@@ -6,13 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu subitems 2</title>
     <link rel="stylesheet" href="css/menu-subitems-2.css">
+    <link rel="stylesheet" href="fonts/style.css">
 </head>
 <body>
+    <div class="box-hamburguer">
+    <span class="hamburguer-menu icon-menu"></span>
+</div>
     <nav>
         <ul>
-            <li><a href="#"></a></li>
+            <li><a href="#"><span class="icon-style icon-home"></span>Inicio</a></li>
+            <li><a href="#"><span class="icon-style icon-shopping-bag"></span>Productos
+                <span class=" icon-sd icon-expand_more"></span></a>
+                <ul class="child-menu">
+                    <li><a href="#">Hogar</a></li>
+                    <li><a href="#">Oficina</a></li>
+                    <li><a href="#">Otros</a></li>
+                </ul>
+            </li>
+            <li><a href="#"><span class="icon-style icon-phone1"></span>Contactenos</a></li>
+            <li><a href="#"><span class="icon-style icon-office"></span>Quienes somos</a></li>
+            
         </ul>
     </nav>
+    <script src="js/menu-subitems-2.js"></script>
     
 </body>
 </html>
