--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                         <li><a href="menu-horizontal.html">Menu</li>
                         <li><a href="media-query.html">Media Query</li>
                         <li><a href="menu-subitems.html">Menu subitems</li>
+                        <li><a href="flexbox.html">flexbox</li>
                         
 
                   </ul>
