--- a/calendario.html
+++ b/calendario.html
@@ -10,7 +10,7 @@
     <div class="main-box">
      <div class="calendar-box">
       
-        <div class="box-celda nombre-mes">Diciembre 2023</div>
+        <div class="box-celdas nombre-mes">Diciembre 2023</div>
         <div class="nombre-dia">Domingo</div>
         <div class="nombre-dia">Lunes</div>
         <div class="nombre-dia">Martes</div>
@@ -20,35 +20,35 @@
         <div class="nombre-dia">Sabado</div>
         <div class="box-celda box-1">1</div>
         <div class="box-celda box-2">2</div>
-        <div class="box-celda box-3">3</div>
+        <div class="box-celda festivos box-3">3</div>
         <div class="box-celda box-4">4</div>
         <div class="box-celda box-5">5</div>
         <div class="box-celda box-6">6</div>
         <div class="box-celda box-7">7</div>
         <div class="box-celda box-8">8</div>
         <div class="box-celda box-9">9</div>
-        <div class="box-celda box-10">10</div>
+        <div class="box-celda festivos box-10">10</div>
         <div class="box-celda box-11">11</div>
         <div class="box-celda box-12">12</div>
         <div class="box-celda box-13">13</div>
         <div class="box-celda box-14">14</div>
         <div class="box-celda box-15">15</div>
         <div class="box-celda box-16">16</div>
-        <div class="box-celda box-17">17</div>
+        <div class="box-celda festivos box-17">17</div>
         <div class="box-celda box-18">18</div>
         <div class="box-celda box-19">19</div>
         <div class="box-celda box-20">20</div>
         <div class="box-celda box-21">21</div>
         <div class="box-celda box-22">22</div>
         <div class="box-celda box-23">23</div>
-        <div class="box-celda box-24">24</div>
+        <div class="box-celda festivos box-24">24</div>
         <div class="box-celda box-25">25</div>
         <div class="box-celda box-26">26</div>
         <div class="box-celda box-27">27</div>
         <div class="box-celda box-28">28</div>
         <div class="box-celda box-29">29</div>
         <div class="box-celda box-30">30</div>
-        <div class="box-celda box-31">31</div>
+        <div class="box-celda festivos box-31">31</div>
 
     </div>
 </div>
