--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                         <li><a href="menu-subitems.html">Menu subitems</li>
                         <li><a href="flexbox.html">flexbox</li>
                         <li><a href="calendario.html">Calendario</li>
-                        
-
+                        <li><a href="maquetacion.html">Calendario</li>
                   </ul>
       </ul>
       <i class="fa-solid fa-house"></i>
