--- a/maquetacion.html
+++ b/maquetacion.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maquetacion</title>
-    <link rel="stylesheet" href="maquetacion.css">
+    <link rel="stylesheet" href="css/maquetacion.css">
 
 </head>
 <body>
-    <h1>Maquetacion</h1>
-    <div class="main-box"></div>
+    <header>
+       <div class="logo style-box">
+        Logo
+       </div>
+       <div class="menu style-box">
+        Menu
+       </div>
+    </header>
+    <div class="main-contents">
+     <div class="img-principal style-box">
+        img principal
+
+     </div>
+<div class="article article-1">
+<div class="img-article-1 style-box style-img-article">img-article1</div>
+<div class="article-texto-1 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ipsum fugiat illum earum provident commodi aut explicabo, consequuntur corrupti a. Amet pariatur velit, enim optio, ducimus suscipit doloremque dolor expedita praesentium sint voluptatibus beatae dolorum laborum saepe sit error animi.</div>
+</div>
+<div class="article article-2">
+    <div class="img-article-2 style-box style-img-article">img-article2</div>
+    <div class="article-texto-2 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut repellat eligendi veniam a. Asperiores, suscipit illo vero dolore unde, commodi quis dicta obcaecati culpa ipsa ullam dolor quas placeat facere doloremque ipsum sit, laborum minus. Aspernatur sunt saepe aliquam ipsa.</div>
+</div>
+<div class="article article-3">
+    <div class="img-article-3 style-box style-img-article">img-article3</div>
+    <div class="article-texto-3 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, est. Ducimus fugit pariatur quasi magni voluptatem, cupiditate quam. Cumque aut sapiente molestiae in neque nemo vero commodi rerum, ullam modi minima, ad et dolores. Fugiat illum quaerat consequatur architecto recusandae!</div>
+</div>
+<div class="article article-4">
+    <div class="img-article-4 style-box style-img-article">img-article4</div>
+    <div class="article-texto-4 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, temporibus. Similique doloribus tenetur aliquam repellat. Deserunt porro quaerat dolorum fugiat distinctio aliquam nemo voluptatem magni, praesentium dicta doloribus in reprehenderit! Repellat tenetur minima molestias saepe eveniet earum nobis esse velit?</div>
+</div>
+<div class="article article-5">
+    <div class="img-article-5 style-box style-img-article">img-article5</div>
+    <div class="article-texto-5 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, amet ratione deserunt pariatur quo saepe modi corrupti ipsum enim illo quia, quaerat quidem accusamus perferendis nostrum neque sequi. Itaque eius ex aspernatur accusamus voluptatem ratione nihil cum numquam! Quas, blanditiis.</div>
+</div>
+<div class="article article-6">
+    <div class="img-article-6 style-box style-img-article">img-article6</div>
+    <div class="article-texto-6 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ut aliquid esse optio accusamus, dolorem pariatur quam porro vitae repudiandae ab veritatis consequuntur dignissimos mollitia hic repellendus facere tempore, voluptatem sequi voluptas reprehenderit dolore explicabo! Eius blanditiis nulla repellat laudantium.</div>
+</div>
+    </div>
 </body>
 </html>
