--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li><a href="flexbox.html">flexbox</li>
                         <li><a href="calendario.html">Calendario</li>
                         <li><a href="maquetacion.html">Maquetacion</li>
+                        <li><a href="maquetación-II.html">Maquetacion Toyota</li>
                   </ul>
       </ul>
       <i class="fa-solid fa-house"></i>
