--- a/maquetacion2.html
+++ b/maquetacion2.html
@@ -16,12 +16,12 @@
         Menu
        </div>
     </header>
-    <div class="main-contents">
+    <div class="main-contents img-fondo-grande">
      <div class="img-principal style-box">
         <img src="img-toyota/principal.png" alt="">
      </div>
 <div class="article article-1">
-<div class="img-article-1 style-box style-img-article"><img class="img-fondo-grande" src="img-toyota/toyota1.png" alt=""></div>
+<div class="img-article-1 style-box style-img-article"><img class="img-fondo-grande" src="img-toyota/toyota2.png" alt=""></div>
 <div class="article-texto-1 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ipsum fugiat illum earum provident commodi aut explicabo, consequuntur corrupti a. Amet pariatur velit, enim optio, ducimus suscipit doloremque dolor expedita praesentium sint voluptatibus beatae dolorum laborum saepe sit error animi.</div>
 </div>
 <div class="article article-2">
