--- a/maquetación-II.html
+++ b/maquetación-II.html
@@ -33,7 +33,7 @@
         </div>
         <div class="article article-1">
           <div class="img-article-1 style-box style-img-article">
-            <img class="img-fondo" src="img-toyota/toyota2.png" alt="">
+            <img class="img-fondo" src="img-toyota/OIP.jpg" alt="">
           </div>
           <div class="text-article-1 style-texto-article">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui quae quidem quo praesentium excepturi fugiat?
