--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                         <li><a href="calendario.html">Calendario</li>
                         <li><a href="maquetacion.html">Maquetacion</li>
                         <li><a href="maquetación-II.html">Maquetacion Toyota</li>
+                        <li><a href="miportafolio1.html">Miportafolio</li>
                   </ul>
       </ul>
       <i class="fa-solid fa-house"></i>
