--- a/miportafolio1.html
+++ b/miportafolio1.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Portafolio</title>
-    <link rel="stylesheet" href="miportafolio.css">
-    <link rel="stylesheet" href="miportafoliomediaquerin.css">
+    <link rel="stylesheet" href="css/miportafolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
@@ -27,6 +26,12 @@
   </header>
 
   <div id="menu" class="fas fa-bars"></div>
+  <section class="home" id="home">
+    <h3>HI THERE !</h3>
+    <h1>Holaa soy <span> Miguel Ángel</span></h1>
+    <p></p>
+
+  </section>
 
 
 
