--- a/miportafolio1.html
+++ b/miportafolio1.html
@@ -29,7 +29,8 @@
   <section class="home" id="home">
     <h3>HI THERE !</h3>
     <h1>Holaa soy <span> Miguel Ángel</span></h1>
-    <p></p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta laborum perspiciatis beatae delectus, officia repellat asperiores ut quos culpa reprehenderit dolorum error.</p>
+    <a href="#education" class="btn">about me <i class="fas fa user"></i>  <button></button></a>
 
   </section>
 
