--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <li><a href="maquetacion.html">Maquetacion</li>
                         <li><a href="maquetación-II.html">Maquetacion Toyota</li>
                         <li><a href="miportafolio1.html">Miportafolio</li>
+                        <li><a href="starbucks.html">starbucks</li>
                   </ul>
       </ul>
       <i class="fa-solid fa-house"></i>
