--- a/miportafolio1.html
+++ b/miportafolio1.html
@@ -17,7 +17,7 @@
   </div>
   <nav class="navbar">
      <ul>
-      <li><a href="#home">home</a></li>
+      <!-- <li><a href="#home">home</a></li> -->
       <li><a href="#about">Quién soy</a></li>
       <li><a href="#education">Estudios</a></li>
       <li><a href="#projet">Proyectos</a></li>
@@ -28,14 +28,14 @@
 
 <div id="menu" class="fas fa-bars"></div>
 
-<section class="home" id="#home">
+<!-- <section class="home" id="#home">
   <h3>HI THERE!</h3>
   <h1>Hola soy <span>Miguel Ortiz</span></h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint in eaque atque quas natus. Recusandae unde obcaecati expedita fuga repellat dolorum iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, unde?
   </p>
   <a href="#about"><button class="btn">yo soy <i class="fas fa-user"></i></button></a>
 
-</section>
+</section> -->
 
 <section class="about" id="about">
   <h1 class="heading"> <span>Quién</span> soy </h1>
