--- a/starbucks.html
+++ b/starbucks.html
@@ -28,19 +28,21 @@
     <input class="button-learn" type="button" value="LEARN MORE">
  </div>
  <div class="product-img">
-    <img src="starbucks-img/img1.png" alt="">
+    <img id="iceStarbucks" src="starbucks-img/img1.png" alt="">
  </div>
   <div class="social-media">
-    <i class="fa-brands fa-facebook-f"></i>
-    <i class="fa-brands fa-twitter"></i>
-    <i class="fa-brands fa-instagram"></i>
+    <i class=" style-img-mini fa-brands fa-facebook-f"></i>
+    <i class=" style-img-mini fa-brands fa-twitter"></i>
+    <i class=" style-img-mini fa-brands fa-instagram"></i>
   </div>
 </div> 
 <footer>
-    <img class="style-img-mini" src="starbucks-img/thumb1.png" alt="">
-    <img class="style-img-mini" src="starbucks-img/thumb2.png" alt="">
-    <img class="style-img-mini" src="starbucks-img/thumb3.png" alt="">
+    <img id="miniGreen" class="style-img-mini mini-green" src="starbucks-img/thumb1.png" alt="">
+    <img id="miniLightPink" class="style-img-mini mini-light-pink" src="starbucks-img/thumb2.png" alt="">
+    <img id="miniDarkPink" class="style-img-mini mini-dark-pink" src="starbucks-img/thumb3.png" alt="">
 </footer>
-<div class="main-circle"></div>
+   <div class="main-circle main-circle-green"></div>
+<div id="mainCircle" class="main-circle"></div>
+<script src="js/starbuck.js"></script>
 </body>
 </html>
