--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <li><a href="maquetación-II.html">Maquetacion Toyota</li>
                         <li><a href="miportafolio1.html">Miportafolio</li>
                         <li><a href="starbucks.html">starbucks</li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste nostrum eum optio repellendus! Perferendis ducimus similique, odio consectetur ratione cumque sequi, labore at modi eum est voluptatibus eius! Expedita, ab.
+                         <li><a href="snekers1.html">Snakers</li>
                   </ul>
       </ul>
       <i class="fa-solid fa-house"></i>
