--- a/snekers1.html
+++ b/snekers1.html
@@ -74,38 +74,41 @@
                 <div class="info-producto">
                     <h3 class="title-info-1">SNEAKER COMPANY</h3>
                     <h2 class="title-info-2">Fall Limited<br>Edition Sneakers</h2>
-                    <h2 class="texto-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum rem neque vitae, beatae modi, excepturi nisi quae quibusdam nobis et perferendis architecto harum eos animi mollitia exercitationem vel, iure voluptate? Accusamus praesentium quis incidunt iste aut harum non consequuntur. Voluptates.</h2>
-                    <div class="box-precio">
-                        <div id="precioUnitario" class="precio">
-                        $180.000
-                       </div>
-                       <div class="descuento">
-                       <label class="lbl-descuento">50%</label>
-                       </div>
+                    <h2 class="texto-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Nostrum rem neque vitae, beatae modi, excepturi nisi quae quibusdam nobis et perferendis 
+                        architecto harum eos animi mollitia exercitationem vel, iure voluptate? Accusamus praesentium
+                         quis incidunt iste aut harum non consequuntur. Voluptates.</h2>
+             
+                <div class="box-precio">
+                    <div id="precioUnitario" class="precio">
+                     $180.000
                     </div>
-                    <div class="box-precio-sin-desc">
-                        $360.000
+                    <div class="descuento">
+                        <label class="lbl-descuento">50%</label>
                     </div>
-                    <div id="boxMinus" class="box-minus-plus">
-                        <div class="box-minus">
-                            <i class="fa-solid fa-minus"></i>
-                        </div>
-                        <div id="boxCantidad" class="box-cantidad">
-                            0
-                        </div>
-                        <div id="boxPlus" class="box-plus">
-                            <i class="fa-solid fa-plus"></i>
-                        </div>
-                    </div>
-                    <div id="valorTotal" class="valor-total">
-                          $0
-                    </div>
-                </div>
+             </div>
+                      <div class="box-precio-sin-desc">
+                      $360.000
+                     </div>
+        <div class="box-minus-plus">
+            <div id="boxMinus" class="box-minus">
+                <i class="fa-solid fa-minus"></i>
             </div>
+        <div id="boxCantidad" class="box-cantidad">
+          0
         </div>
-    </div> 
-    </div>
-    
+        <div id="boxPlus" class="box-plus">
+            <i class="fa-solid fa-plus"></i>
+        </div>
+     </div>
+         <div id="valorTotal" class="valor-total">
+           $ 0
+         </div>
+        </div>     
+     </div>
+  </div>
+ </div>
+</div>
     <script src="js/sneakers.js"></script>
 </body>
 </html>
