--- a/index.html
+++ b/index.html
@@ -177,6 +177,12 @@
                   <label>Snakers</label>
             </div>
       </a>
+      <a href="mercadolibre.html">
+            <div class="box">
+                  <img src="imagenes/mercadolibre.png" alt="">
+                  <label>Mercsdolibre</label>
+            </div>
+      </a>
   </div>
 
 </section>
